created base renderers

--- a/components/body.html
+++ b/components/body.html
@@ -1,5 +1,5 @@
-<div data-component-type="body" data-route="/" data-default-route="/overview">
-  <div data-component="nav"></div>
-  <div data-component="main"></div>
-  <div data-component="footer"></div>
+<div data-sp-component-type="body" data-sp-route="/" data-sp-default-route="/overview">
+  <div data-sp-component="nav"></div>
+  <div data-sp-component="main"></div>
+  <div data-sp-component="footer"></div>
 </div>
