--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<footer data-component-type="footer">
+<footer data-sp-component-type="footer">
   <li><a href="/overview">Overview</a></li>
   <li><a href="/docs">docs</a></li>
   <li><a href="/blog">docs</a></li>
