--- a/components/main.html
+++ b/components/main.html
@@ -1,5 +1,5 @@
-<div data-component-type="main" data-commands="stack">
-  <div data-component="overview"></div>
-  <div data-component="docs"></div>
-  <div data-component="blog">
+<div data-sp-component-type="main" data-sp-commands="stack">
+  <div data-sp-component="overview"></div>
+  <div data-sp-component="docs"></div>
+  <div data-sp-component="blog">
 </div>
