--- a/components/nav.html
+++ b/components/nav.html
@@ -1,4 +1,4 @@
-<nav data-component-type="nav">
+<nav data-sp-component-type="nav">
   <li><a href="/overview">Overview</a></li>
   <li><a href="/docs">docs</a></li>
   <li><a href="/blog">docs</a></li>
