--- a/components/overview.html
+++ b/components/overview.html
@@ -1,1 +1,1 @@
-<div data-component-type="overview" data-route="/overview"></div>
+<div data-sp-component-type="overview" data-sp-route="/overview"></div>
