--- a/components/paging.html
+++ b/components/paging.html
@@ -1,4 +1,4 @@
-<div data-component-type="paging">
-  <a data-links-href="previous" data-locale-inner="previous"></a>
-  <a data-links-href="next" data-locale-inner="next"></a>
+<div data-sp-component-type="paging">
+  <a data-sp-links-href="previous" data-sp-locale-inner="previous"></a>
+  <a data-sp-links-href="next" data-sp-locale-inner="next"></a>
 </div>
