--- a/components/blog.html
+++ b/components/blog.html
@@ -1,5 +1,5 @@
-<div data-component-type="blog" data-route="/blog/:month?" data-model="Blog">
-  <div data-key="posts" data-component="post-summary"></div>
-  <div data-component="paging"></div>
-  <div data-component="blog-archive"></div>
+<div data-sp-component-type="blog" data-sp-route="/blog/:month?" data-sp-model="Blog">
+  <div data-sp-key="posts" data-sp-component="post-summary"></div>
+  <div data-sp-component="paging"></div>
+  <div data-sp-component="blog-archive"></div>
 </div>
