--- a/components/post-summary.html
+++ b/components/post-summary.html
@@ -1,5 +1,5 @@
-<div data-component-type="post-summary" data-model="Post">
-  <h1 data-bind-inner="title"></h1>
-  <div data-bind-inner="content|200"></div>
-  <a data-links-href="readFullPost" data-locale-inner="readFullPost"></a>
+<div data-sp-component-type="post-summary" data-sp-model="Post">
+  <h1 data-sp-bind-inner="title"></h1>
+  <div data-sp-bind-inner="content|200"></div>
+  <a data-sp-links-href="readFullPost" data-sp-locale-inner="readFullPost"></a>
 </div>
