--- a/components/docs.html
+++ b/components/docs.html
@@ -1,1 +1,1 @@
-<div data-sp-component-type="docs" data-sp-route="/docs"></div>
+<div data-sp-component-type="docs" data-sp-route="/docs">Docs</div>
