--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,5 @@
 <footer data-sp-component-type="footer">
   <li><a href="/overview">Overview</a></li>
   <li><a href="/docs">docs</a></li>
-  <li><a href="/blog">docs</a></li>
+  <li><a href="/blog">blog</a></li>
 </footer>
