--- a/components/nav.html
+++ b/components/nav.html
@@ -1,5 +1,5 @@
 <nav data-sp-component-type="nav">
   <li><a href="/overview">Overview</a></li>
   <li><a href="/docs">docs</a></li>
-  <li><a href="/blog">docs</a></li>
+  <li><a href="/blog">blog</a></li>
 </nav>
