default routing added

--- a/components/body.html
+++ b/components/body.html
@@ -1,4 +1,4 @@
-<div data-sp-component-type="body" data-sp-route="/" data-sp-default-route="/overview">
+<div data-sp-component-type="body">
   <div data-sp-component="nav"></div>
   <div data-sp-component="main"></div>
   <div data-sp-component="footer"></div>
