--- a/components/overview.html
+++ b/components/overview.html
@@ -1,1 +1,1 @@
-<div data-sp-component-type="overview" data-sp-route="/overview">Overview</div>
+<div data-sp-component-type="overview" data-sp-route="/overview" data-sp-default-route="/">Overview</div>
