added header component

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,3 @@
 <footer data-sp-component-type="footer">
-  <li><a href="/overview">Overview</a></li>
-  <li><a href="/docs">docs</a></li>
-  <li><a href="/blog">blog</a></li>
+  <div data-sp-component="nav"></div>
 </footer>
