--- a/components/body.html
+++ b/components/body.html
@@ -1,5 +1,5 @@
 <div data-sp-component-type="body">
-  <div data-sp-component="nav"></div>
+  <div data-sp-component="header"></div>
   <div data-sp-component="main"></div>
   <div data-sp-component="footer"></div>
 </div>
