--- a/components/blog.html
+++ b/components/blog.html
@@ -1,4 +1,4 @@
-<div data-sp-component-type="blog" data-sp-route="/blog/:month?" data-sp-model="Blog">
+<div data-sp-component-type="blog" data-sp-model="Blog">
   Blog
   <div data-sp-key="posts" data-sp-component="post-summary"></div>
   <div data-sp-component="paging"></div>
