reconfigured client routing to mimic backend api

--- a/components/main.html
+++ b/components/main.html
@@ -1,5 +1,5 @@
 <div data-sp-component-type="main" data-sp-commands="stack">
   <div data-sp-component="overview" data-sp-route="/overview" data-sp-default-route="/"></div>
   <div data-sp-component="docs" data-sp-route="/docs"></div>
-  <div data-sp-component="blog" data-sp-route="/blog/:month?"></div>
+  <div data-sp-component="blog" data-sp-route="/blog" data-sp-ddd="/blog/:month?"></div>
 </div>
