added base hackney grove components

--- a/components/header.html
+++ b/components/header.html
@@ -1,3 +1,4 @@
 <header data-sp-component-type="header">
-  <div data-sp-component="nav"></div>
+  <h1 data-sp-content="locale:company">HackneyGrove</h1>
+  <h2 data-sp-content="locale:strapline">Architecture</h2>
 </header>
