--- a/components/main.html
+++ b/components/main.html
@@ -1,5 +1,9 @@
 <div data-sp-component-type="main" data-sp-controller="stack">
-  <div data-sp-component="overview" data-sp-route="/overview" data-sp-default-route="/"></div>
-  <div data-sp-component="docs" data-sp-route="/docs"></div>
-  <div data-sp-component="blog" data-sp-route="/blog" data-sp-ddd="/blog/:month?"></div>
+  <div data-sp-component="design" data-sp-route="/design" data-sp-default-route="/"></div>
+  <div data-sp-component="planning" data-sp-route="/planning"></div>
+  <div data-sp-component="build" data-sp-route="/build"></div>
+  <div data-sp-component="about" data-sp-route="/about"></div>
+  <!-- <div data-sp-component="blog" data-sp-route="/blog"></div> -->
+  <div data-sp-component="contact" data-sp-route="/contact"></div>
 </div>
+
