--- a/components/nav.html
+++ b/components/nav.html
@@ -1,5 +1,8 @@
 <nav data-sp-component-type="nav">
-  <li><a href="/overview">Overview</a></li>
-  <li><a href="/docs">docs</a></li>
-  <li><a href="/blog">blog</a></li>
+  <li><a href="/design" data-sp-content="locale:design">Design</a></li>
+  <li><a href="/planning" data-sp-content="locale:planning">Planning</a></li>
+  <li><a href="/build" data-sp-content="locale:build">Build</a></li>
+  <li><a href="/about" data-sp-content="locale:about">About</a></li>
+  <!-- <li><a href="/blog" data-sp-content="locale:blog"></a></li> -->
+  <li><a href="/contact" data-sp-content="locale:contact">Contact</a></li>
 </nav>
